Added a tiled background image.
Added a tiled background image for the cleaning site.

--- a/includes/css/styles4.css
+++ b/includes/css/styles4.css
@@ -16,6 +16,10 @@ Notes:	 Hand coded for Udemy.com
 	margin: 0;
 	padding: 0;
 }
+
+html {
+	background-image: url("../../images/agsquare.png")
+}
 #top-banner .header-logo {
     text-align: center;
     font-size: 26px;
