--- a/includes/css/styles4.css
+++ b/includes/css/styles4.css
@@ -154,7 +154,8 @@ ul.unstyled {
 	color: white;
 }
 #carousel-background {
-    background: #1A0044;
+    background-image: url("../../images/agsquare.png");
+
     margin: 0;
 }
 #myCarousel {
@@ -171,7 +172,7 @@ ul.unstyled {
 }
 #myCarousel .item { height: 400px; }
 #slide1 {
-    background: url("../../images/mountain_medium.jpg") top center no-repeat;
+    background: url("../../images/livroom_medium.jpg") top center no-repeat;
 }
 
 #slide2 {
@@ -179,18 +180,43 @@ ul.unstyled {
 }
 
 #slide3 {
-    background: url("../../images/ocean_medium.jpg") top center no-repeat;
+    background: url("../../images/ocean_medium.jpg")no-repeat;
 }
 /* --------------------------------------
    Feature panels
    -------------------------------------- */
+#content-heading-flag {
+	text-align: center;
+	color: white;
+	background: #F08891;
+	padding-bottom: 7px;
+	margin-bottom: 40px;
+
+
+}
+#company-name-heading{
+	background-image: url("../../images/agsquare.png");
+	text-align: center;
+	color: black;
+	padding-bottom: 20px;
+
+}
+
+.panel-background {
+	background-image: url("../../images/agsquare.png");
+}
 .panel-heading {
 	background-color: #393A8C ;
 	color: white;
 	
 }
-
-
+.guarantee-background {
+	background: url("../../images/vac_badge.jpg") top center no-repeat; 
+	color: black;
+}
+.col-sm-4 feature {
+	background-image: url("../../images/agsquare.png");	
+}
 /* --------------------------------------
    Global Styles
    -------------------------------------- */
@@ -221,7 +247,7 @@ hr {
 @media (max-width: 768px) {
 	#myCarousel .item { height: 310px; }
 	#slide1 {
-	    background: url("../../images/mountain_small.jpg") top center no-repeat;
+	    background: url("../../images/livroom_small.jpg") top center no-repeat;
 	}
 	
 	#slide2 {
@@ -261,7 +287,7 @@ hr {
 @media (min-width: 1200px) {
 	#myCarousel .item { height: 500px; }
 	#slide1 {
-	    background: url("../../images/mountain_large.jpg") top center no-repeat;
+	    background: url("../../images/livroom_large.jpg") top center no-repeat;
 	}
 	
 	#slide2 {
