--- a/includes/css/styles4.css
+++ b/includes/css/styles4.css
@@ -72,7 +72,15 @@ body {
 }
 ul.unstyled {
     list-style: none;
-    padding: 0;
+    padding: 0px;
+}
+.row > .col-sm-8 ul > .unordered-list > ul{	
+	
+}
+.red-number {
+	border: thin gray dashed;
+	color: maroon;
+	padding: 15px;
 }
 /* --------------------------------------
    Navbar
@@ -119,8 +127,8 @@ ul.unstyled {
     padding: 0px 0px;
     color: white;
     margin: 25px 0px;
-    margin-right: 130px;
     text-align: center;
+    margin-right: 20px;
   
     
     
@@ -130,6 +138,7 @@ ul.unstyled {
 .navbar-brand:hover,
 .navbar-brand:focus {
     color: white;
+ 
 }
 /* --------------------------------------
     navbar-nav 
@@ -281,6 +290,15 @@ hr {
    -------------------------------------- */
 /* Portrait & landscape phone */
 @media (max-width: 480px) {
+	#content-heading-flag {
+		text-align: left;
+		color: white;
+		background: #00C1C1;
+		padding-bottom: 7px;
+		margin-bottom: 7px;
+	
+	
+	}
 
 }
 /* Landscape phone to portrait tablet */
@@ -316,9 +334,14 @@ hr {
     margin-right: auto;
     margin-left: auto;
     }
-    .navbar-responsive-collapse > button{
-    padding-top: 40px;
-	margin-top: 20px;
+	#content-heading-flag {
+		text-align: left;
+		color: white;
+		background: #00C1C1;
+		padding-bottom: 7px;
+		margin-bottom: 7px;
+	
+	
 	}
 
 
@@ -343,10 +366,6 @@ hr {
 	.navbar-brand {
 	/* VERTICAL HORIZONTAL */
     color: white;
-    margin-right: 500px;
     }
-    .secondary-button {
-       	margin-top: px;
-	}
 
 }
